force-app/main/default/objects/CSV_Export__c/CSV_Export__c.object-meta.xml
<CustomObject>
    <description>This is the master object that we will use for link records to for the export process.</description>
    <label>CSV Export</label>
    <nameField>
        <displayFormat>CSVEID-{000000000}</displayFormat>
        <label>CSV Export ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSV Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>