force-app/main/default/objects/CSV_Export__c/fields/Next_Status__c.field-meta.xml
<CustomField>
    <fullName>Next_Status__c</fullName>
    <label>Next Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>