force-app/main/default/objects/CSV_Export__c/recordTypes/Example.recordType-meta.xml
<RecordType>
    <fullName>Example</fullName>
    <active>true</active>
    <description>This is an example recordtype and should not be used in production</description>
    <label>Example</label>
</RecordType>